--- a/Flashlight/Base.lproj/Main.storyboard
+++ b/Flashlight/Base.lproj/Main.storyboard
@@ -16,6 +16,10 @@
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="Flashlight" translatesAutoresizingMaskIntoConstraints="NO" id="2OI-nh-eq6">
+                                <rect key="frame" x="0.0" y="318" width="393" height="680"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="ON" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1JO-JN-fgx">
                                 <rect key="frame" x="148" y="190" width="98" height="78"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -28,6 +32,9 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" title="ON"/>
+                                <connections>
+                                    <action selector="onAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="ZII-7g-XtC"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="KBe-Ex-un3">
                                 <rect key="frame" x="213" y="355" width="56" height="35"/>
@@ -38,14 +45,23 @@
                                     <action selector="offAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="YUr-SW-HGZ"/>
                                 </connections>
                             </button>
+                            <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ssy-Xe-klz">
+                                <rect key="frame" x="174" y="506" width="49" height="31"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <connections>
+                                    <action selector="switchAction:" destination="BYZ-38-t0r" eventType="valueChanged" id="DGy-yT-pue"/>
+                                </connections>
+                            </switch>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     </view>
                     <connections>
+                        <outlet property="imageOutlet" destination="2OI-nh-eq6" id="3qi-U4-qfk"/>
                         <outlet property="labelOutlet" destination="1JO-JN-fgx" id="UDe-iw-lVb"/>
                         <outlet property="offOutlet" destination="KBe-Ex-un3" id="e2z-Y9-BmX"/>
                         <outlet property="onOutlet" destination="Pu8-1P-oRV" id="H9l-Ie-hVK"/>
+                        <outlet property="switchOutlet" destination="ssy-Xe-klz" id="oTG-sb-ISI"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
@@ -54,6 +70,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="Flashlight" width="1080" height="1080"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
